<resources>
    <string name="app_name">School of Fish</string>
    <string name="action_settings">Settings</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="the_play_arear_is_divided_into_four_zones_ocen_reef_island_and_kelp_forest_each_round_begins_with_players_selecting_a_zone_to_visit">The play area is divided into four zones:Ocean,Reef,island, and kelp Forest.Each round begins with players selecting a zone to visit</string>
    <string name="after_all_roles_are_assigned_but_before_play_commences_each_player_is_given_the_oppertunity_to_name_another_giplayer_and_take_a_secret_look_at_that_player_s_role">After all roles are assigned , but before play commences ,each player is given the opportunity to name another giplayer and take a secret look at that player`s role</string>
    <string name="each_animal_has_a_role_specific_win_condition_the_object_of_the_game_is_to_acheive_your_animal_s_win_condition_over_four_timed_rounds">Each animal has a role -specific win condition.The object of the game is to achieve your animal`s win condition over four timed rounds</string>
    <string name="there_are_13_animals_in_this_game">There are 13 animals in this game</string>
    <string name="instructions">Instructions</string>
    <string name="if_the_attacking_animal_is_on_the_same_level_or_lower_level_as_the_target_of_the_atatck_nothing_happens">If the attacking animal is on the same level or lower level as the target of the atatck, nothing happens.</string>
    <string name="attacks_are_carried_out_by_placing_a_bite_sticker_on_the_shoulder_of_another_player_this_is_not_a_combat_game_force_running_dodging_fighting_etc_are_not_allowed">Attacks are carried out by placing a Bite sticker on the shoulder of another player. This is NOT a combat game: force, running,dodging,fighting,etc., are not allowed</string>
    <string name="once_the_round_begins_higher_level_animals_can_attack_and_eat_lower_level_animals_in_the_same_zone">Once the round begins ,higher level animals can attack(and eat) lower level animals in the same zone</string>
    <string name="each_game_is_led_by_a_big_fish_who_oversees_rules_enforcment_with_other_members_of_the_school">Each game is led by a Big fish,who oversees rules enforcement with other members of the school !</string>
    <string name="each_animal_has_a_home_habitat_if_youspend_a_round_away_from_your_home_habitat_you_must_go_to_your_home_habitat_in_the_following_round_otherwise_you_die">Each animal has a home habitat.If you spend a round away from your home habitat, you Must go to your home habitat in the following round.Otherwise ,you die.</string>
    <string name="if_the_attack_is_successful_the_eaten_player_must_leve_the_main_play_area_remember_you_might_be_eathen_and_still_be_able_to_acheive_your_win_condition">If the attack is successful, the eaten player must level the main play area , Remember you might be eaten and still be able to achieve your win condition.</string>
    <string name="if_a_player_is_eaten_that_player_s_name_but_not_the_player_s_role_is_revealed_to_players_in_the_other_zones">If a player is eaten ,that player`s name -but not the player`s role -is revealed to players in the other zones.</string>
    <string name="before_round_1_and_after_rounds_1_2_and_3_you_may_move_freely_stratgize_with_other_players_in_the_other_zones">Before round 1 and after rounds 1,2 and 3,you may move freely ,strategize with other players in the other zones</string>
    <string name="after_the_end_of_round_4_the_finla_round_winners_i_e_all_players_who_met_their_win_condition_will_be_announced_and_applauded">After the end of round 4 (the final round) ,winners (i.e ,all players who met their win condition) will be announced and applauded.</string>
    <string name="choose_your_habitat">Choose your habitat</string>
    <string name="ocean">Ocean</string>
    <string name="reef">Reef</string>
    <string name="island">Island</string>
    <string name="kelp_forest">Kelp Forest</string>
</resources>
